GNOME Bugzilla – Bug 788424
No feedback when launching an invalid URI
Last modified: 2018-01-24 17:48:19 UTC
If I click a link somewhere to an invalid URI, gnome-software launches to its front page. On the console this message is logged: 12:08:20:0203 Gs failed to convert URL to GsApp: no application was created for running url-to-app with refine-flags=require-icon with failure-flags=use-events with timeout=60 with search=appstream://you.must.be.joking/ on plugin=snap To reproduce, you can for example run - $ xdg-open appstream://this.is.invalid from a terminal. I'm attaching a patch and a screenshot to start a design discussion. We're shipping this in Ubuntu, but I'm up for refining it to get this upstream.
Created attachment 360767 [details] [review] details: Show an in-app notification when passed an invalid file or URL Previously there was no feedback when gnome-software was fed a bad URL on the commandline - show a message.
Created attachment 360771 [details] screenshot of proposal I think it's actually true that we could say something to the effect of “Could not find ‘%s’“ here. What we know is that we tried to search all the configured plugins and none of them returned a result, so maybe that's good enough?
-- GitLab Migration Automatic Message -- This bug has been migrated to GNOME's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.gnome.org/GNOME/gnome-software/issues/236.