details: Show an in-app notification when passed an invalid file or URL

Previously there was no feedback when gnome-software was fed a bad URL
on the commandline - show a message.

https://bugzilla.gnome.org/show_bug.cgi?id=788424